# myblog/docs/swagger.yaml
@@ -462,14 +462,13 @@ paths:
     post:
       consumes:
       - application/json
-      description: 登录
+      description: 前台添加一个留言
       parameters:
-      - description: 登录
+      - description: 添加留言
         in: body
-        name: login
-        required: true
+        name: board
         schema:
-          $ref: '#/definitions/model.User'
+          $ref: '#/definitions/model.Board'
       produces:
       - application/json
       responses:
@@ -489,8 +488,9 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/model.Reponse'
+      summary: 添加留言
       tags:
-      - Login
+      - Board
   /api/board/delete/{id}:
     delete:
       consumes:
@@ -1141,6 +1141,40 @@ paths:
       summary: 后台查看动态评论列表
       tags:
       - LifeComment
+  /api/login:
+    post:
+      consumes:
+      - application/json
+      description: 登录
+      parameters:
+      - description: 登录
+        in: body
+        name: login
+        required: true
+        schema:
+          $ref: '#/definitions/model.User'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Reponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.Reponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/model.Reponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.Reponse'
+      summary: 登录
+      tags:
+      - Login
   /api/project:
     get:
       consumes:
